--- a/templates/thank_you.html
+++ b/templates/thank_you.html
@@ -7,23 +7,24 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: #ffffff; /* Background color */
             margin: 0;
             padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            color: #FFDE59; /* Default text color */
         }
         .thank-you-container {
             text-align: center;
-            background-color: #fff;
+            background-color: #001F5D;
             padding: 30px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         h1 {
-            color: #333;
+            color: #FFDE59; /* Highlighted text color */
             margin-bottom: 20px;
         }
         img {
@@ -34,8 +35,8 @@
         }
         a.button {
             display: inline-block;
-            background-color: #4CAF50;
-            color: white;
+            background-color: #FFDE59; /* Button background color */
+            color: #001F5D; /* Text color on button */
             padding: 14px 20px;
             text-align: center;
             text-decoration: none;
