--- a/templates/register.html
+++ b/templates/register.html
@@ -7,12 +7,13 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: #001F5D; /* Background color */
             margin: 0;
             padding: 0;
+            color: #FFDE59; /* Default text color */
         }
         h1 {
-            color: #333;
+            color: #FFDE59; /* Highlighted text color */
             text-align: center;
             margin-top: 50px;
         }
@@ -40,8 +41,8 @@
         }
         input[type="submit"] {
             width: 100%;
-            background-color: #4CAF50;
-            color: white;
+            background-color: #FFDE59; /* Button background color */
+            color: #001F5D; /* Text color on button */
             padding: 14px 20px;
             margin: 8px 0;
             border: none;
